Auto format all files